<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/remainderBackground"
    android:id="@+id/view_in_fragment_rem">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:transitionName="appbarTransition">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleEnabled="false"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="none"
                android:layout_marginTop="?attr/actionBarSize"
                android:elevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/addBtn"
                        android:layout_width="48dp"
                        android:layout_height="24dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/icaddcircleoutline" />

                    <EditText
                        android:id="@+id/reminderName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_toStartOf="@+id/addBtn"
                        android:enabled="false"
                        android:lines="1"
                        android:text="Enter reminder title" />

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/reminderName"
                        android:layout_marginStart="16dp"
                        android:text="01/01/1970"
                        android:textSize="16sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/reminderName"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@+id/date"
                        android:paddingStart="40dp"
                        android:text="00:00"
                        android:textSize="16sp"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/checkBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_below="@+id/time"
                        android:layout_marginBottom="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="24dp"
                        android:scaleType="fitEnd"
                        android:src="@drawable/iccheck"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/closeBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/time"
                        android:layout_marginBottom="19dp"
                        android:layout_marginStart="21dp"
                        android:layout_marginTop="24dp"
                        android:src="@drawable/icclose"
                        android:visibility="gone" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                android:elevation="10dp"
                android:background="@color/colorPrimary"
                app:title="Reminders"
                app:titleTextColor="@color/white"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:background="#eeeeee"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/reminders_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp">

                </android.support.v7.widget.RecyclerView>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>